# fast-api-poetry-script-run

./: README.md  pyproject.toml
app/: main.py
