[tool.poetry]
name = "fastapi-toy"
version = "0.1.0"
description = ""
authors = ["Andy D.K Lee <andy5090@naver.com>"]

packages = [
    { include="app", from="." },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.1"

[tool.poetry.dev-dependencies]
uvicorn = "^0.16.0"

[tool.poetry.scripts]
start = "app.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
